@@ -2,21 +2,18 @@ package vn.unistock.unistockmanagementsystem.features.user.productTypes;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-
+import vn.unistock.unistockmanagementsystem.entities.ProductType;
+import vn.unistock.unistockmanagementsystem.features.user.productTypes.ProductTypeRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ProductTypeService {
     private final ProductTypeRepository productTypeRepository;
-    private final ProductTypeMapper productTypeMapper;
 
     public List<ProductTypeDTO> getAllProductTypes() {
-        return productTypeRepository.findAll()
-                .stream()
-                .map(productTypeMapper::toDTO)
-                .collect(Collectors.toList());
+        return productTypeRepository.findAll().stream()
+                .map(type -> new ProductTypeDTO(type.getTypeId(), type.getTypeName()))
+                .toList();
     }
 }
-
